# foghttp

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench_clients.py  cli.py  constants.py  load.py  models.py  reports.py  resources.py  runner.py  scenarios.py  server.py  validation.py
bench/clients/: __init__.py  aiohttp_client.py  base.py  foghttp_client.py  httpx_client.py  registry.py  utils.py  zapros_client.py
bench/results/: 20260507-002101.json  20260507-002101.md  20260507-002126.json  20260507-002126.md  latest.json  latest.md
bench/templates/: report.md.j2
docs/: auth.md  benchmarks.md  cookies.md  index.md  lifecycle.md  limitations.md  packaging.md  policy-hooks.md  proxies.md  pyo3-boundary.md  quickstart.md  redirects.md  request-builder.md  retries.md  ssrf.md  streaming.md  telemetry.md  timeouts.md  tls.md  upload-types.md  use-cases.md
examples/: README.md  async_json_fanout.py  async_lifecycle_debug.py  async_resource_limits.py  async_streaming.py  authentication.py  compressed_response.py  cookies.py  http_proxy.py  multipart_uploads.py  prepared_requests.py  redirects.py  request_builder_compatibility.py  retry_policy.py  ssrf_policy.py  sync_json_api.py  sync_streaming.py  telemetry_hooks.py
foghttp/: __init__.py  _auth_headers.py  _foghttp.pyi  _redaction.py  _request_body.py  _telemetry.py  async_client.py  auth.py  body.py  client.py  client_closed_error.py  client_shared.py  connect_timeout.py  exceptions.py  fog_http_error.py  headers.py  http_status_error.py  lifecycle_debug.py  lifecycle_error.py  limits.py  messages.py  methods.py  models.py  policy.py  pool_diagnostics.py  pool_stats.py  pool_timeout.py  read_timeout.py  request.py  request_error.py  request_extensions.py  request_info.py  response.py  response_error.py  retry.py  retry_trace.py  ssrf.py  stats.py  stream_response.py  timeout_diagnostics.py  (+7 more)
foghttp/_client/: __init__.py  asyncio_futures.py  auth.py  config.py  constants.py  core.py  lifecycle_debug.py  options.py  process.py  raw.py  request.py  response.py  retry.py  retry_trace_mapping.py  stats.py  stream_context.py  tls.py  transport.py  transport_requests.py  transport_snapshot_mapping.py
foghttp/_multipart/: __init__.py  constants.py  content_type.py  encoding.py  fields.py  file_parts.py  iterators.py  length.py  models.py  normalize.py  parts.py  stream.py  values.py
foghttp/_response/: __init__.py  encoding.py  status.py
foghttp/_streaming/: __init__.py  text.py
foghttp/_upload_body/: __init__.py  async_sending.py  chunks.py  feeders.py  file_source.py  models.py  normalize.py  predicates.py  runtime.py  thread_bridge.py
foghttp/_validation/: callables.py  numeric.py  ssrf.py
foghttp/errors/: __init__.py  base.py  lifecycle.py  response.py  ssrf.py  timeout.py  types.py
foghttp/status_codes/: __init__.py  client_error.py  redirect.py  server_error.py  success.py
foghttp/stream_response/: __init__.py  async_response.py  base.py  bindings.py  constants.py  lifecycle_debug.py  status.py  sync_response.py  telemetry.py
foghttp/telemetry/: __init__.py  config.py  errors.py  events.py  sinks.py
foghttp/types/: __init__.py  http.py  multipart.py  request.py  streams.py
scripts/: cargo_precommit.sh  check_all_position.py  install_wheel_smoke.py
src/: errors.rs  lib.rs  messages.rs
src/core/: client.rs  headers.rs  method.rs  metrics.rs  mod.rs  request.rs  response.rs
src/py/: client.rs  mod.rs  pool_diagnostics.rs  response.rs  retry.rs  stats.rs  transport_state.rs  url.rs
tests/: client_warning_actions.py  conftest.py  http_body_scenarios.py  redirect_helpers.py  request_factories.py  test_async_client.py  test_async_redirects.py  test_async_response.py  test_client.py  test_client_options.py  test_headers.py  test_public_api.py  test_query_params.py  test_raw_client.py  test_raw_client_errors.py  test_redaction.py  test_request_extensions.py  test_request_model.py  test_response_encoding.py  test_response_flags.py  test_runtime_workers.py  test_sync_client.py  test_sync_redirects.py  test_sync_response.py  test_transport_stats.py  test_transport_stats_waiters.py  test_url.py
tests/client_auth/: test_async_auth.py  test_contract.py  test_sync_auth.py
tests/client_cancellation/: conftest.py  constants.py  helpers.py  lifecycle_debug_actions.py  lifecycle_debug_assertions.py  lifecycle_debug_data.py  lifecycle_debug_predicates.py  test_async_cancellation.py  test_async_lifecycle_debug.py  test_async_lifecycle_debug_buffered.py  test_async_lifecycle_debug_messages.py  test_async_lifecycle_debug_streaming.py  test_async_lifecycle_debug_strict.py  test_async_telemetry.py  test_asyncio_helpers.py
tests/client_cookies/: assertions.py  test_async_cookies.py  test_sync_cookies.py
tests/client_keepalive/: assertions.py  conftest.py  constants.py  models.py  server.py  test_async_keepalive.py  test_sync_keepalive.py
tests/client_lifecycle/: conftest.py  constants.py  fork_actions.py  helpers.py  test_async_client_lifecycle.py  test_client_lifecycle.py  test_fork_close_safety.py  test_fork_safety.py  test_fork_stream_safety.py  test_raw_client_lifecycle.py  test_sync_client_lifecycle.py  test_sync_close_race.py  test_sync_close_waits.py
tests/client_multipart/: assertions.py  models.py  sources.py  test_async_multipart.py  test_multipart_internals.py  test_request_builder.py  test_sync_multipart.py
tests/client_options/: __init__.py  raw_options.py  test_numeric_validation.py  test_raw_numeric_boundary.py  test_raw_retry_boundary.py  test_raw_ssrf_boundary.py
tests/client_policy_hooks/: requests.py  test_async_hooks.py  test_contract.py  test_sync_hooks.py
tests/client_proxy/: client_options.py  conftest.py  connect_proxy_server.py  environment.py  http_proxy_server.py  test_client_config.py  test_environment.py  test_http_proxy_transport.py  test_https_proxy_connect.py  test_no_proxy.py  test_proxy_models.py
(+308 files in other folders)
