[package]
name = "foghttp"
version = "0.3.0"
edition = "2021"
license = "MIT"

[lib]
name = "foghttp"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
brotli = "8.0.2"
bytes = "1.8.0"
flate2 = "1.1.5"
http-body-util = "0.1.2"
url = "2.5.4"

[dependencies.hyper]
version = "1.5.1"
features = [
    "client",
    "http1",
]

[dependencies.hyper-rustls]
version = "0.27.3"
default-features = false
features = [
    "http1",
    "ring",
    "tls12",
]

[dependencies.hyper-util]
version = "0.1.10"
features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
]

[dependencies.pyo3]
version = "0.28.3"

[dependencies.rustls]
version = "0.23.40"
default-features = false
features = [
    "ring",
    "std",
    "tls12",
]

[dependencies.tokio]
version = "1.41.1"
features = [
    "rt-multi-thread",
    "sync",
    "time",
]

[dependencies.webpki-roots]
version = "1.0.7"
