[package]
name = "foghttp"
version = "0.3.5"
edition = "2021"
license = "MIT"

[lib]
name = "foghttp"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
brotli = "8.0.4"
bytes = "1.12.0"
flate2 = "1.1.9"
http-body-util = "0.1.3"
url = "2.5.8"

[dependencies.hyper]
version = "1.10.1"
features = [
    "client",
    "http1",
]

[dependencies.hyper-rustls]
version = "0.27.9"
default-features = false
features = [
    "http1",
    "ring",
    "tls12",
]

[dependencies.hyper-util]
version = "0.1.20"
features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
]

[dependencies.pyo3]
version = "0.29.0"

[dependencies.rustls]
version = "0.23.41"
default-features = false
features = [
    "ring",
    "std",
    "tls12",
]

[dependencies.tokio]
version = "1.52.3"
features = [
    "io-util",
    "rt-multi-thread",
    "sync",
    "time",
]

[dependencies.tower-service]
version = "0.3.3"

[dependencies.webpki-roots]
version = "1.0.8"
