[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "foghttp"
version = "0.1.0"
description = "Rust-powered async HTTP client for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AMBER FOG" }]
keywords = ["asyncio", "http", "http-client", "hyper", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["orjson>=3.10"]

[project.urls]
Homepage = "https://github.com/AmberFog/foghttp"
Repository = "https://github.com/AmberFog/foghttp"
Issues = "https://github.com/AmberFog/foghttp/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "foghttp._foghttp"
python-source = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
