[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "foghttp"
version = "0.3.1"
description = "Observable Rust-powered HTTP client for Python services."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AMBER FOG" }]
keywords = ["asyncio", "http", "http-client", "hyper", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["orjson>=3.11,<4"]

[project.urls]
Documentation = "https://github.com/AmberFog/foghttp/blob/main/docs/index.md"
Homepage = "https://github.com/AmberFog/foghttp"
Repository = "https://github.com/AmberFog/foghttp"
Issues = "https://github.com/AmberFog/foghttp/issues"

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7,<8",
    "faker>=33",
    "hypothesis>=6,<7",
    "mypy>=2.1,<3",
    "pre-commit>=4,<5",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.15,<0.16",
    "trustme>=1.2",
]
[tool.maturin]
features = [
    "extension-module",
]
module-name = "foghttp._foghttp"
python-source = "."

[tool.pytest.ini_options]
addopts = ["-p", "no:anyio"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["foghttp"]

[tool.coverage.report]
fail_under = 98
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["foghttp"]
strict = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
show_error_codes = true
namespace_packages = false
exclude = [
    "^tests/",
]
