[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "foghttp"
version = "0.3.6"
description = "Observable Rust-powered HTTP client for Python services."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AMBER FOG" }]
keywords = ["asyncio", "http", "http-client", "hyper", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["orjson>=3.11,<4"]

[project.urls]
CodeOfConduct = "https://github.com/AmberFog/foghttp/blob/main/CODE_OF_CONDUCT.md"
Contributing = "https://github.com/AmberFog/foghttp/blob/main/CONTRIBUTING.md"
Discussions = "https://github.com/AmberFog/foghttp/discussions"
Documentation = "https://github.com/AmberFog/foghttp/blob/main/docs/index.md"
Homepage = "https://github.com/AmberFog/foghttp"
Issues = "https://github.com/AmberFog/foghttp/issues"
Repository = "https://github.com/AmberFog/foghttp"
Security = "https://github.com/AmberFog/foghttp/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7,<8",
    "faker>=33",
    "hypothesis>=6,<7",
    "mypy>=2.1,<3",
    "pre-commit>=4,<5",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2,<3",
    "ruff>=0.15,<0.16",
    "trustme>=1.2",
]
[tool.maturin]
features = [
    "extension-module",
]
module-name = "foghttp._foghttp"
python-source = "."

[tool.pytest.ini_options]
addopts = ["-p", "no:anyio"]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 20
timeout_method = "thread"

[tool.coverage.run]
branch = true
source = ["foghttp"]

[tool.coverage.report]
fail_under = 98
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["foghttp", "tests/types"]
strict = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
show_error_codes = true
namespace_packages = false
